--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@ h4 {
   color: #c0392b;
 }
 
+.money.zero {
+  color: #000;
+}
+
 label {
   display: inline-block;
   margin: 10px 0;
@@ -121,10 +125,6 @@ select {
   position: relative;
   padding: 10px;
   margin: 10px 0;
-}
-
-.list li.plus {
-  border-right: 5px solid #2ecc71;
 }
 
 .list li.minus {
